feat: add tracks.js  lampa plugin for audio and subtitle management
Signed-off-by: Pavel Pikta <pavel_pikta@epam.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -49,8 +49,8 @@ tmp/
 logs/
 *.log
 
-# TorrServer (not needed in container)
-TorrServer/
+# Example files
+example/
 
 # Scripts (run on host, not in container)
 scripts/
